--- a/wsgi/openshift/templates/bz/base.html
+++ b/wsgi/openshift/templates/bz/base.html
@@ -1,9 +1,28 @@
-<!DOCTYPE html>
 <html lang="en">
    {% load staticfiles %}
    <head><h1 align="center">Check Bugzilla Compliance</h1><hr /><head>
    <body>
       <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
+
+      <div class="container" id="config-menu" style="display:none">
+         {% block config %}
+               {% include "bz/config.html" %}
+         {% endblock %}
+      </div>
+
+      <div class="container">
+         {% block main %}
+         {% endblock %}
+      </div>
+
+      <div class="container">
+         {% block results %}
+         {% endblock %}
+      </div>
+ 
+      <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+      <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
       <script type="text/javascript">
          function getCookie(cname){
@@ -21,18 +40,17 @@
          if(getCookie("rh_user") == ""){
             var redirect = document.URL;
             window.location.replace("https://www.redhat.com/wapps/sso/login.html?redirect=" + redirect);
+         } else {
+            var str = getCookie("rh_user");
+            var res = str.split("\|"); 
+            var user = res[0];
+            if (String(user) == "rhn-support-mowens"){
+               document.getElementById("config-menu").style.display = 'block';
+            }
+            else {
+               document.getElementById("config-menu").style.display = 'none';
+            } 
          }
-
       </script>
-      
-      {% block content %}
-      {% endblock %}
-
-      {% block config %}
-      {% endblock %}
-      
-      <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
    <body>
 <html>
