--- a/wsgi/openshift/templates/bz/results.html
+++ b/wsgi/openshift/templates/bz/results.html
@@ -1,41 +1,360 @@
 {% extends "bz/base.html" %}
 {% block results %}
-   <div class="panel-body">
-      <div class="panel-group" id="accordion">
-         {% for bug, bugdata in data.items %}
-            <div class="panel panel-danger">
-               <div class="panel-heading">
-                  <h4 class="panel-title">
-                  <a data-toggle="collapse" href="#{{ bug }}">Bug ID {{ bug }}
-                  </a>
-                  </h4>
+<div class="container">
+   <h3>Total Bugs Checked: {{ total_checked }}</h3>
+   <h3>Total Bugs Ignored: {{ total_ignored }}</h3>
+</div>
+<div class="container">
+   <div class="panel-group" id="accordion">
+      {% for bug in raw_data %}
+         <div class="panel panel-danger">
+            <div class="panel-heading">
+               <div class="row">
+                  <div class="col-md-2">
+                     <h1 class="panel-title">
+                     <a data-toggle="collapse" href="#{{ bug.id }}">Bug ID {{ bug.id }}</a></h1>
+                  </div>
+
+                  <div class="col-md-3" style="padding-top:5px">
+                     <table>
+                        <tr>
+                           <td style="padding-right:5px"> 
+                              {% if bug.problems|length != 0 %}
+                                 <span class="label label-danger">
+                                    Errors: {{ bug.problems|length }}
+                                 </span>
+                              {% else %}
+                                 <span class="label label-success">
+                                    Errors: {{ bug.problems|length }}
+                                 </span>
+                              {% endif %}
+                           </td>
+                           <td>
+                              {% if bug.warnings|length > 0 %}
+                                    <span class="label label-warning">
+                                       Warnings: {{ bug.warnings|length }}
+                                    </span>
+                                 {% else %}
+                                    <span class="label label-success">
+                                       Warnings: {{ bug.warnings|length }}
+                                    </span>
+                                 {% endif %}
+                              </td>
+                           </tr>
+                        </table>
+                     </div>
+
+                     <div class="col-md-7" align="right"> 
+                        <a href="https://bugzilla.redhat.com/show_bug.cgi?id={{ bug.id }}">Bugzilla Link</a>
+                     </div>         
+                  </div>
                </div>
+            </div> <!-- panel-heading -->
 
-               {% for k,v in bugdata.items %}
-
-                  {% if k == "problems" %}
-                     <div id="{{ bug }}" class="panel-collapse collapse">
-                        <div class="panel-body">            
-                           {% for i in v %}
-                              {% for problems_keys, problems_values in i.items %}
-                                 <p>
-                                 <div class="alert alert-warning">
-                                    {% if problems_keys != "id" %}
-                                       <strong>Message:</strong> {{ problems_values }}
-                                    {% else %}
-                                       <strong>Error Type:</strong> {{ problems_values }}
-                                    {% endif %}
-                                 </div>
-                                 </p>
-                              {% endfor %}
+            {% if total_checked <= 2 %}
+               <div id="{{ bug.id }}" class="panel-collapse collapse in">
+            {% else %}
+               <div id="{{ bug.id }}" class="panel-collapse collapse">
+            {% endif %}
+               <div class="panel-body">
+                  <ul class="nav nav-tabs nav-justified">        
+                     <li class="active"><a href="#{{ bug.id }}-current" data-toggle="tab">Errors</a></li>
+                     {% if bug.parents|length != 0 %}
+                        {% if bug.parents|length > 1 %}
+                           <li class="dropdown" data-toggle="tab">
+                              <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                 Parents <span class="caret"></span>
+                              </a>
+                              <ul class="dropdown-menu">
+                                 {% for i in bug.parents %}
+                                    <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">{{ i.id }}</a></li>
+                                 {% endfor %}
+                              </ul>
+                           </li>
+                        {% else %}
+                           {% for i in bug.parents %}
+                              <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">Parent ({{ i.id }})</a></li>
                            {% endfor %}
-                           </div>
-                        </div>
-                  {% endif %}   
-                  
-               {% endfor %}
+                        {% endif %}
+                     {% endif %}
 
+                     {% if bug.clones|length != 0 %}
+                        {% if bug.clones|length > 1 %}
+                           <li class="dropdown" data-toggle="tab">
+                              <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                 Clones <span class="caret"></span>
+                              </a>
+                              <ul class="dropdown-menu">
+                                 {% for i in bug.clones %}
+                                    <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">{{ i.id }}</a></li>
+                                 {% endfor %}
+                              </ul>
+                           </li>
+                        {% else %}
+                           {% for i in bug.clones %}
+                              <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">Clone ({{ i.id }})</a></li>
+                           {% endfor %}
+                        {% endif %}
+                     {% endif %}
+
+                     <li><a href="#{{ bug.id }}-detials" data-toggle="tab">More Detials</a></li>
+                  </ul> 
+                  <div class="tab-content" style="padding-top:3%">
+                     <div class="tab-pane active" id="{{ bug.id }}-current">
+                        <div class="row">
+                           <div class="col-md-12">
+                              {% for i in bug.problems %}
+                                 <div class="alert alert-warning">
+                                    {% for problems_keys, problems_values in i.items %}
+                                       {% if problems_keys != "id" and problems_values != ""%}
+                                          <p><strong>Description:</strong> {{ problems_values }}</p>
+                                       {% endif %}
+
+                                       {% if problems_keys == "id" and problems_values != "" %}
+                                          <p><strong>Error Type:</strong> {{ problems_values }}</p>
+                                       {% endif %}
+                                    {% endfor %}
+                                 </div>
+                              {% endfor %}
+                              
+                              {% for i in bug.warnings %}
+                                 <div class="alert alert-info">
+                                    <h4 align="center">WARNING</h4>
+                                    {% for problems_keys, problems_values in i.items %}
+                                       {% if problems_keys != "id" and problems_values != ""%}
+                                          <p><strong>Description:</strong> {{ problems_values }}</p>
+                                       {% endif %}
+
+                                       {% if problems_keys == "id" and problems_values != "" %}
+                                          <p><strong>Error Type:</strong> {{ problems_values }}</p>
+                                       {% endif %}
+                                    {% endfor %}
+                                 </div>
+                              {% endfor %}
+                           </div>   
+                        </div>
+                     </div> <!-- tab-pane -->
+
+                     {% block parent %}
+                        {% include "bz/parent.html" %}
+                     {% endblock %}
+
+                     {% block clone %}
+                        {% include "bz/clone.html" %}
+                     {% endblock %}
+
+                     {% block more_detials %}
+                        {% include "bz/more_detials.html" %}
+                     {% endblock %}
+                  </div><!-- tab-content -->
+               </div><!-- panel-body -->              
+            </div><!-- panel-collapse -->
+         </div><!-- panel -->
+      {% endfor %}
+   </div> <!-- panel group -->
+   
+</div> <!-- container -->
+<div class="container">
+   <div class="panel-group" id="accordion">
+      {% for bug in ignored %}
+         <div class="panel panel-info">
+            <div class="panel-heading">
+               <div class="row">
+                  <div class="col-md-2">
+                     <h1 class="panel-title">
+                     <a data-toggle="collapse" href="#{{ bug.id }}">Bug ID {{ bug.id }}</a></h1>
+                  </div>
+                  
+                  <div class="col-md-3" style="padding-top:3px">
+                     <h1 class="panel-title">
+                        <span style="padding-top:5px"class="label label-info">Ignored</span>
+                     </h1>
+                  </div>
+
+                  <div class="col-md-7" align="right"> 
+                     <a href="https://bugzilla.redhat.com/show_bug.cgi?id={{ bug.id }}">Bugzilla Link</a>
+                  </div>         
+               </div>
             </div>
-         {% endfor %}
-      </div>
+            {% if total_checked <= 2 %}
+               <div id="{{ bug.id }}" class="panel-collapse collapse in">
+            {% else %}
+               <div id="{{ bug.id }}" class="panel-collapse collapse">
+            {% endif %}
+               <div class="panel-body">
+                  <ul class="nav nav-tabs nav-justified">        
+                     <li class="active"><a href="#{{ bug.id }}-current" data-toggle="tab">Errors</a></li>
+                     {% if bug.parents|length != 0 %}
+                        {% if bug.parents|length > 1 %}
+                           <li class="dropdown" data-toggle="tab">
+                              <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                 Parents <span class="caret"></span>
+                              </a>
+                              <ul class="dropdown-menu">
+                                 {% for i in bug.parents %}
+                                    <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">{{ i.id }}</a></li>
+                                 {% endfor %}
+                              </ul>
+                           </li>
+                        {% else %}
+                           {% for i in bug.parents %}
+                              <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">Parent ({{ i.id }})</a></li>
+                           {% endfor %}
+                        {% endif %}
+                     {% endif %}
+
+                     {% if bug.clones|length != 0 %}
+                        {% if bug.clones|length > 1 %}
+                           <li class="dropdown" data-toggle="tab">
+                              <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                 Clones <span class="caret"></span>
+                              </a>
+                              <ul class="dropdown-menu">
+                                 {% for i in bug.clones %}
+                                    <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">{{ i.id }}</a></li>
+                                 {% endfor %}
+                              </ul>
+                           </li>
+                        {% else %}
+                           {% for i in bug.clones %}
+                              <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">Clone ({{ i.id }})</a></li>
+                           {% endfor %}
+                        {% endif %}
+                     {% endif %}
+
+                     <li><a href="#{{ bug.id }}-detials" data-toggle="tab">More Detials</a></li>
+                  </ul> 
+                  <div class="tab-content" style="padding-top:3%">
+
+                     <div class="tab-pane active" id="{{ bug.id }}-current">
+                        <div class="row">
+                           <div class="col-md-12">
+                              <div class="alert alert-warning">
+                                 <p><strong>Bug was CLOSED. Ignored bug.</strong></p>
+                              </div>
+                           </div>   
+                        </div>
+                     </div> <!-- tab-pane -->
+
+                     {% block ingored-parent %}
+                        {% include "bz/parent.html" %}
+                     {% endblock %}
+
+                     {% block ignored-clone %}
+                        {% include "bz/clone.html" %}
+                     {% endblock %}
+
+                     {% block ignored-more_detials %}
+                        {% include "bz/more_detials.html" %}
+                     {% endblock %}
+                  </div>
+               </div>
+               </div>
+            </div>
+         </div>
+      {% endfor %}
+   </div>
+</div>
+
+<div class="container">
+   <div class="panel-group" id="accordion">
+      {% for bug in passed %}
+         <div class="panel panel-success">
+            <div class="panel-heading">
+               <div class="row">
+                  <div class="col-md-2">
+                     <h1 class="panel-title">
+                     <a data-toggle="collapse" href="#{{ bug.id }}">Bug ID {{ bug.id }}</a></h1>
+                  </div>
+                  
+                  <div class="col-md-3" style="padding-top:3px">
+                     <h1 class="panel-title">
+                        <span style="padding-top:5px"class="label label-success">Passed</span>
+                     </h1>
+                  </div>
+
+                  <div class="col-md-7" align="right"> 
+                     <a href="https://bugzilla.redhat.com/show_bug.cgi?id={{ bug.id }}">Bugzilla Link</a>
+                  </div>         
+               </div>
+            </div>
+            {% if total_checked <= 2 %}
+               <div id="{{ bug.id }}" class="panel-collapse collapse in">
+            {% else %}
+               <div id="{{ bug.id }}" class="panel-collapse collapse">
+            {% endif %}
+               <div class="panel-body">
+                  <ul class="nav nav-tabs nav-justified">        
+                     <li class="active"><a href="#{{ bug.id }}-current" data-toggle="tab">Errors</a></li>
+                     {% if bug.parents|length != 0 %}
+                        {% if bug.parents|length > 1 %}
+                           <li class="dropdown" data-toggle="tab">
+                              <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                 Parents <span class="caret"></span>
+                              </a>
+                              <ul class="dropdown-menu">
+                                 {% for i in bug.parents %}
+                                    <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">{{ i.id }}</a></li>
+                                 {% endfor %}
+                              </ul>
+                           </li>
+                        {% else %}
+                           {% for i in bug.parents %}
+                              <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">Parent ({{ i.id }})</a></li>
+                           {% endfor %}
+                        {% endif %}
+                     {% endif %}
+
+                     {% if bug.clones|length != 0 %}
+                        {% if bug.clones|length > 1 %}
+                           <li class="dropdown" data-toggle="tab">
+                              <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                                 Clones <span class="caret"></span>
+                              </a>
+                              <ul class="dropdown-menu">
+                                 {% for i in bug.clones %}
+                                    <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">{{ i.id }}</a></li>
+                                 {% endfor %}
+                              </ul>
+                           </li>
+                        {% else %}
+                           {% for i in bug.clones %}
+                              <li><a data-toggle="tab" href="#{{ bug.id }}-{{ i.id }}-parent">Clone ({{ i.id }})</a></li>
+                           {% endfor %}
+                        {% endif %}
+                     {% endif %}
+
+                     <li><a href="#{{ bug.id }}-detials" data-toggle="tab">More Detials</a></li>
+                  </ul> 
+                  <div class="tab-content" style="padding-top:3%">
+
+                     <div class="tab-pane active" id="{{ bug.id }}-current">
+                        <div class="row">
+                           <div class="col-md-12">
+                              <div class="alert alert-warning">
+                                 <p><strong>Bug is in Compliance. All Tests passed.</strong></p>
+                              </div>
+                           </div>   
+                        </div>
+                     </div> <!-- tab-pane -->
+
+                     {% block passed-parent %}
+                        {% include "bz/parent.html" %}
+                     {% endblock %}
+
+                     {% block passed-clone %}
+                        {% include "bz/clone.html" %}
+                     {% endblock %}
+
+                     {% block passed-more_detials %}
+                        {% include "bz/more_detials.html" %}
+                     {% endblock %}
+                  </div>
+               </div>
+               </div>
+            </div>
+         </div>
+      {% endfor %}
+   </div>
+</div>
 {% endblock %}
