--- a/wsgi/openshift/templates/bz/config.html
+++ b/wsgi/openshift/templates/bz/config.html
@@ -1,3 +1,26 @@
 {% block config %}
-   <!--<p>Configuration Menu Will be loaded</p>-->
+          <div class="navbar navbar-inverse">
+           <div class="container">
+             <div class="navbar-header">
+               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                 <span class="sr-only">Toggle navigation</span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+               </button>
+               <a class="navbar-brand custom" href="/">BZCompliance</a>
+             </div>
+             <div class="navbar-collapse collapse">
+               <ul class="nav navbar-nav">
+                  <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports<b class="caret"></b></a>
+                     <ul class="dropdown-menu">
+                        <li><a href="/rfe">Find RFE's</a></li>
+                     </ul>                        
+                  </li>
+
+             </div><!--/.nav-collapse -->
+           </div>
+         </div>
 {% endblock %}
