--- a/wsgi/openshift/templates/bz/base.html
+++ b/wsgi/openshift/templates/bz/base.html
@@ -2,9 +2,8 @@
    {% load staticfiles %}
    <head><h1 align="center">Check Bugzilla Compliance</h1><hr /><head>
    <body>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
       <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
-      <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+      <link href="{% static "bootstrap-datetime/css/bootstrap-datetimepicker.min.css" %}" rel="stylesheet">
 
       <div class="container" id="config-menu" style="display:none">
          {% block config %}
@@ -39,7 +38,7 @@
             var str = getCookie("rh_user");
             var res = str.split("\|"); 
             var user = res[0];
-            if (String(user) == "rhn-support-mowens"){
+            if (String(user) == "rhn-support-cww" || String(user) == "rhn-support-mowens"){
                document.getElementById("config-menu").style.display = 'block';
             }
             else {
@@ -47,5 +46,8 @@
             } 
          }
       </script>
+      <script src="{% static "bootstrap-datetime/js/bootstrap-datetimepicker.min.js" %}"></script>
+      <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
    <body>
 <html>
