--- a/wsgi/openshift/templates/bz/more_detials.html
+++ b/wsgi/openshift/templates/bz/more_detials.html
@@ -8,8 +8,15 @@
          </h5>
          <dd>{{ bug.data.summary }}</dd>
       </dl>
-
       <div class="row">
+         <div class="col-md-4">
+            <dl class="dl-horizontal">
+               <h5>
+                  <dt>Bug ID<dt>
+               </h5>
+               <dd><a href="https://bugzilla.redhat.com/show_bug.cgi?id={{ bug.id }}">{{ bug.id }}</a></dd>
+            </dl>
+         </div> 
          <div class="col-md-4">
             <dl class="dl-horizontal">
                <h5>
@@ -17,7 +24,17 @@
                </h5>
                <dd>{{ bug.data.status }}</dd>
             </dl>
-         </div>  
+         </div> 
+         <div class="col-md-4">
+            <dl class="dl-horizontal">
+               <h5>
+                  <dt>Resolution<dt>
+               </h5>
+               <dd>{{ bug.data.resolution }}</dd>
+            </dl>
+         </div> 
+      </div>
+      <div class="row">
          <div class="col-md-4">
             <dl class="dl-horizontal">
                <h5>
@@ -34,9 +51,8 @@
                <dd>{{ bug.data.priority }}</dd>
             </dl>
          </div>  
-      </div>                                
+      </div>  
 
-   
       <div class="row">
          <div class="col-md-4">
             <dl class="dl-horizontal">
