--- a/wsgi/openshift/templates/bz/base.html
+++ b/wsgi/openshift/templates/bz/base.html
@@ -1,22 +1,28 @@
 <html lang="en">
    {% load staticfiles %}
-   <head><h1 align="center">Check Bugzilla Compliance</h1><hr /><head>
+   <head>
+      <h1 align="center">Check Bugzilla Compliance</h1><hr />
+      <link rel="shortcut icon" type="image/x-icon" href="{% static "download/favicon.ico" %}"/>
+   </head>
    <body>
-      <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
-      <link href="{% static "bootstrap-datetime/css/bootstrap-datetimepicker.min.css" %}" rel="stylesheet">
-
       <div class="container" id="config-menu" style="display:none">
          {% block config %}
                {% include "bz/config.html" %}
          {% endblock %}
       </div>
 
-         {% block main %}
-         {% endblock %}
+      {% block results %}
+      {% endblock %}
 
-         {% block results %}
-         {% endblock %}
- 
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
+      <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+
+      <link href="{% static "bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" %}" rel="stylesheet">
+      <script src="{% static "bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js" %}"></script>
+
+      {% block main %}
+      {% endblock %}
 
       <script type="text/javascript">
          function getCookie(cname){
@@ -46,8 +52,5 @@
             } 
          }
       </script>
-      <script src="{% static "bootstrap-datetime/js/bootstrap-datetimepicker.min.js" %}"></script>
-      <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
    <body>
 <html>
