--- a/wsgi/openshift/templates/bz/rfe/results.html
+++ b/wsgi/openshift/templates/bz/rfe/results.html
@@ -4,6 +4,7 @@
    <h3>Total Bugs Checked: {{ total_checked }}</h3>
    <h3>Total Bugs Ignored: {{ total_ignored }}</h3>
 </div>
+{{ query }}
 <div class="container">
    <div class="panel-group" id="accordion">
       {% for bug in raw_data %}
