--- a/wsgi/openshift/templates/bz/results.html
+++ b/wsgi/openshift/templates/bz/results.html
@@ -140,7 +140,7 @@
                               {% if bug.errata == 1 or bug.errata_clone == 1 or bug.errata_parent == 1 %}
                                  <div class="alert alert-success">
                                     <h4>Bug has a CLOSED ERRATA</h4>
-                                    <p><b>Description:</b> A patch or a fix has been made for this bug.</p> 
+                                    <p><b>Description:</b> A patch or a fix has been released for this bug.</p> 
                                     <p><b>Errata Link:</b> <a href="{{ bug.errata_link }}">Click Here</a></p>
                                     <p><b>Number of SF: </b>{{ bug.errata_sf }}</p>
                                  </div>
@@ -313,7 +313,7 @@
                               {% if bug.errata == 1 or bug.errata_clone == 1 or bug.errata_parent == 1 %}
                                  <div class="alert alert-success">
                                     <h4>Bug has a CLOSED ERRATA</h4>
-                                    <p><b>Description:</b> A patch or a fix has been made for this bug.</p> 
+                                    <p><b>Description:</b> A patch or a fix has been released for this bug.</p> 
                                     <p><b>Errata Link:</b> <a href="{{ bug.errata_link }}">Click Here</a></p>
                                     <p><b>Number of SF: </b>{{ bug.errata_sf }}</p>
                                  </div>
@@ -460,7 +460,7 @@
                               {% if bug.errata == 1 or bug.errata_clone == 1 or bug.errata_parent == 1 %}
                                  <div class="alert alert-success">
                                     <h4>Bug has a CLOSED ERRATA</h4>
-                                    <p><b>Description:</b> A patch or a fix has been made for this bug.</p> 
+                                    <p><b>Description:</b> A patch or a fix has been released for this bug.</p> 
                                     <p><b>Errata Link:</b> <a href="{{ bug.errata_link }}">Click Here</a></p>
                                     <p><b>Number of SF: </b>{{ bug.errata_sf }}</p>
                                  </div>
