--- a/wsgi/openshift/templates/bz/config.html
+++ b/wsgi/openshift/templates/bz/config.html
@@ -14,10 +14,16 @@
              <div class="navbar-collapse collapse">
                <ul class="nav navbar-nav">
                   <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports<b class="caret"></b></a>
-                     <ul class="dropdown-menu">
-                        <li><a href="/rfe">Find RFE's</a></li>
-                     </ul>                        
+                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                           <li><a href="/rfe">Find RFE's</a></li>
+                        </ul>                        
+                  </li>
+                  <li class="dropdown">
+                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                           <li><a href="/saved">Saved Searches</a></li>
+                        </ul>                        
                   </li>
 
              </div><!--/.nav-collapse -->
