--- a/wsgi/openshift/templates/bz/base.html
+++ b/wsgi/openshift/templates/bz/base.html
@@ -2,7 +2,7 @@
    {% load staticfiles %}
    <head>
       <h1 align="center">Check Bugzilla Compliance</h1><hr />
-      <link rel="shortcut icon" type="image/x-icon" href="{% static "download/favicon.ico" %}"/>
+      <link rel="shortcut icon" type="image/png" href="{% static "download/bugzilla-fighting.png" %}"/>
    </head>
    <body>
       <div id="vanhoof-message">
